<resources>
    <string name="app_name">My Finances</string>
    <string name="action_settings">Settings</string>
    <string name="et_incoming">Incoming</string>
    <string name="rb_spent">spent</string>
    <string name="rb_gain">gain</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_incoming">Incoming</string>
    <string name="tvDate">2019/07/09 13:24</string>
    <string name="tv_type_of_Incoming">Type of Incoming:</string>
    <string name="title_activity_incoming">IncomingActivity</string>
    <string name="menu_search">Search</string>
    <string name="searchable_hint">Incoming date</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="search_hint">Pesquise por data</string>
    <string name="app_label">Buscas</string>
</resources>
